# vanity-platform

./: .gitignore  README.md  justfile  renovate.json  settings.gradle.kts
.github/: pull_request_template.md  semantic.yml
.github/workflows/: tests.yml
app/: build.gradle.kts
app/src/main/kotlin/app/: App.kt
app/src/main/kotlin/app/apps/elbishtranslator/: ElbishTranslator.kt  ElbishTranslatorNode.kt
app/src/main/kotlin/app/apps/elbishtranslator/backing/elbtrans-server/: Cargo.toml
app/src/main/kotlin/app/apps/elbishtranslator/backing/elbtrans-server/src/: main.rs  routeselb.rs
app/src/main/kotlin/app/apps/elbishtranslator/client/: Client.kt
app/src/main/kotlin/app/apps/elbishtranslator/frontend/: ElbishTranslator.kt
app/src/main/kotlin/app/apps/elbishtranslator/frontend/backingclient/: ElbishClient.kt
app/src/main/kotlin/app/apps/elbishtranslator/frontend/init/: ElbishAppContext.kt  InitElbishTrans.kt
app/src/main/kotlin/app/apps/elbishtranslator/frontend/serverstartup/: ServerStartup.kt
app/src/main/kotlin/app/apps/elbishtranslator/frontend/ui/: ElbishTranslatorNode.kt
app/src/main/kotlin/app/apps/elbishtranslator/server-startup/: ServerStartup.kt
app/src/main/kotlin/app/apps/elbishtranslator/serverstartup/: ServerStartup.kt
app/src/main/kotlin/app/apps/services/: AppService.kt
app/src/main/kotlin/app/common/client/: RestClient.kt
app/src/main/kotlin/app/common/execution/: ExecutionUtil.kt
app/src/main/kotlin/app/execution/: ExecutionUtil.kt
app/src/main/resources/: platform.css
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
