[package]
name = "elbtrans-server"
version = "0.1.0"
edition = "2021"
description = "Elbish translation server"
license = "Apache-2.0"
keywords = ["LOTR", "translation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
json = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

